--- a/Belutecnica/Intranet/appsettings.json
+++ b/Belutecnica/Intranet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BELAALFA\\PRIMAVERA;Database=Intranet;Trusted_Connection=false;user=sa;password=inCentea16.;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=_ERPEXEC\\PRIMAVERA;Database=Intranet;Trusted_Connection=false;user=sa;password=inCentea16.;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -46,5 +46,8 @@
     "smtpSSL": true,
     "fromEmail": "---your from email-------------------",
     "fromFullName": "---your from full name------------"
+  },
+  "Primavera": {
+
   }
 }
