add edit ferramentas

--- a/Belutecnica/Intranet/appsettings.json
+++ b/Belutecnica/Intranet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BELAALFA\\PRIMAVERA;Database=Intranet;Trusted_Connection=false;user=sa;password=inCentea16.;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\PRIMAVERA;Database=Intranet;Trusted_Connection=false;user=sa;password=inCentea16.;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -48,6 +48,12 @@
     "fromFullName": "---your from full name------------"
   },
   "Primavera": {
-
+    "Empresa": "Demo",
+    "ConnectionString": "",
+    "DataBase":  "PriDemo",
+    "Utilizador": "xxxx",
+    "Password": "xxxx",
+    "PublicKey": "xxxxx",
+    "ApiKey": "xxxxx"
   }
 }
