edit janela ferramenras

--- a/Belutecnica/Intranet/appsettings.json
+++ b/Belutecnica/Intranet/appsettings.json
@@ -50,10 +50,11 @@
   "Primavera": {
     "Empresa": "Demo",
     "ConnectionString": "",
-    "DataBase":  "PriDemo",
+    "DataBase": "PriDemo",
     "Utilizador": "xxxx",
     "Password": "xxxx",
     "PublicKey": "xxxxx",
-    "ApiKey": "xxxxx"
+    "ApiKey": "xxxxx",
+    "TipoArtigoFerramenta": "3"
   }
 }
